--- a/package.json
+++ b/package.json
@@ -11,23 +11,31 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
+"@angular/cdk": "^14.2.7",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+"@angular/material": "^14.2.7",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+"@ng-bootstrap/ng-bootstrap": "^13.1.0",
+    "@popperjs/core": "^2.10.2",
+    "@types/jquery": "^3.5.14",
     "bootstrap": "^5.2.2",
     "jquery": "^3.6.1",
+"popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
+ "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.7",
     "@angular/cli": "~14.2.7",
     "@angular/compiler-cli": "^14.2.0",
+"@angular/localize": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
@@ -35,7 +43,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "tslib": "^2.4.1",
+
     "typescript": "~4.7.2"
   }
 }
