--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@asymmetrik/ngx-leaflet": "^14.0.1",
     "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "@popperjs/core": "^2.10.2",
     "@types/jquery": "^3.5.14",
     "bootstrap": "^5.2.2",
     "jquery": "^3.6.1",
+    "leaflet": "^1.9.2",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
@@ -37,6 +39,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@angular/localize": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "@types/leaflet": "^1.9.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
